samples/_failures_safe/1761357884_deda91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23a017ee.c: In function ‘execute_operation’:
./samples/SAFE/__tmp_23a017ee.c:144:25: error: missing terminating " character
  144 |         fprintf(stderr, "Invalid graph or operation
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_23a017ee.c:144:9: error: expected expression at end of input
  144 |         fprintf(stderr, "Invalid graph or operation
      |         ^~~~~~~
./samples/SAFE/__tmp_23a017ee.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_23a017ee.c:144:9: error: expected declaration or statement at end of input
